--- a/concepts/bite-protocol/intro-bite-protocol.mdx
+++ b/concepts/bite-protocol/intro-bite-protocol.mdx
@@ -1,57 +1,33 @@
 ---
 title: "Introduction"
-description: "BITE Protocol on SKALE - Proof of Encryption and MEV Resistance"
+description: "BITE Protocol: encrypted transactions, MEV resistance, and confidential apps on SKALE"
 ---
 
 ## What Is Proof‑of‑Encryption?
 
-Proof of Encryption (PoE) is a foundational security protocol within the SKALE blockchain that guarantees the confidentiality and integrity of every transaction from initiation to final consensus.
+Proof-of-Encryption (PoE) keeps SKALE transactions sealed from submission through finality. Data stays encrypted in flight, preventing front-running, snooping, or manipulation. Only after consensus does the validator committee decrypt for execution using threshold keys—no single party can peek or tamper early.
 
-Unlike traditional blockchain systems—where transaction data is visible or partially exposed during propagation and validation—PoE enforces full end-to-end encryption throughout the entire transaction lifecycle.
-
-This ensures that:
-
-* Transaction details remain cryptographically sealed and inaccessible to validators, network nodes, or adversaries.
-* No party can view transaction contents until after they are irreversibly committed by consensus.
-* Risks such as premature parsing, front-running, manipulation, and data leakage are eliminated.
-
-PoE uses threshold encryption, where decryption is only possible when the active validator committee collaborates. After inclusion and finality, encrypted transactions can be securely decrypted for execution.
+*[Graphic placeholder: Encrypted tx → consensus → threshold decryption → execution]* 
 
 ## How BITE Enables Proof‑of‑Encryption
 
-The BITE Protocol implements Proof of Encryption on the SKALE blockchain. It builds on years of research and production operation of SKALE Consensus, extending the Ethereum Virtual Machine (EVM) and Solidity to handle threshold‑encrypted user transactions and data.
+BITE extends the EVM with threshold encryption so builders keep their existing Solidity, wallets, and tooling. Its goals:
+- **Kill MEV at the root** by hiding calldata and destination until after finality.
+- **Make privacy default** so Web2-grade apps can ship without revealing sensitive data.
+- **Stay EVM-native** so Metamask, Foundry, Ethers, and Viem work as-is.
 
-The goals of BITE are:
-
-* Eliminate all MEV (Maximal Extractable Value) by encrypting transaction data until after block finality.
-* Enable privacy-first capabilities that match or exceed traditional Web2 application functionality.
-* Maintain full compatibility with Ethereum/EVM tooling, wallets, and developer workflows such as Metamask, Foundry, Ethers, Viem, etc.
-
-BITE development is divided into four phases:
-
-1. Threshold decryption during consensus.
-2. Threshold decryption on smart contract data.
-3. Threshold re-encryption.
-4. Threshold fully homomorphic encryption (THFE) within smart contracts.
-
-Check out the [Phases of BITE](/concepts/bite-protocol/phases) for more information
+BITE rolls out in four phases—from encrypted transaction inclusion to fully homomorphic encryption inside contracts. See [Phases of BITE](/concepts/bite-protocol/phases) for the roadmap.
 
 ## Native MEV Resistance
 
-BITE achieves provable MEV resistance by encrypting the destination address and data field of transactions before submission to the blockchain.
+By encrypting the `to` and `data` fields, BITE removes the information MEV bots need. Transactions are opaque until after finality, making front-running and sandwich attacks impossible.
 
 How it works:
+1. Wallet encrypts payload with SKALE’s threshold encryption (same tx format, no custom wallet needed).
+2. Consensus finalizes the encrypted transaction.
+3. Validators jointly decrypt after finality, then execute in the EVM.
 
-1. User transaction payload is encrypted via SKALE's threshold encryption algorithm.
-2. Encryption is applied directly on top of the Ethereum transaction format.
-3. Wallets, RPCs, and client software require no modification.
-
-In Ethereum:
-
-* Destination address → identifies the smart contract to be invoked.
-* Data field → contains function selector, price, amount, asset pair, etc.
-
-MEV actors target these fields to extract value. BITE conceals them until after block finality, making front-running impossible.
+*[Graphic placeholder: Hidden calldata preventing sandwich attack]* 
 
 ## Two‑Phase Execution Model
 
@@ -68,12 +44,16 @@ With BITE Protocol:
 * Similar transactions (same gas/data patterns) cannot be easily correlated or censored.
 * Routine activity becomes opaque to outside observers.
 
+*[Graphic placeholder: Obfuscated mempool vs. transparent mempool comparison]* 
+
 ## Consensus And Key Management
 
 * Threshold encryption is built directly into SKALE consensus.
 * Fresh public/private keys are generated each epoch using an onchain Distributed Key Generation (DKG) protocol.
 * A new random committee is selected each epoch for encryption and decryption duties.
 * SKALE combines DKG, threshold BLS signatures, and encrypted mempool‑less execution.
+
+This rotating, onchain-managed key system keeps trust decentralized while enabling privacy-by-default.
 
 ## Learn More
 
