--- a/concepts/bite-protocol/phases.mdx
+++ b/concepts/bite-protocol/phases.mdx
@@ -1,11 +1,13 @@
 ---
 title: "Phases of BITE"
-description: "Understanding the phases and evolution of the BITE Protocol"
+description: "Roadmap to encrypted-by-default SKALE Chains"
 ---
 
 ## Overview
 
-BITE development is divided into four phases, each building upon the previous to enable increasingly sophisticated privacy-preserving and MEV-resistant capabilities on SKALE.
+BITE rolls out in four phases, moving from encrypted transaction inclusion to fully homomorphic encrypted computation. Each step keeps SKALE EVM-compatible while dialing up privacy and MEV resistance.
+
+*[Graphic placeholder: Phase timeline from encrypted inclusion → encrypted state → re-encryption → THFE]* 
 
 ## BITE Protocol Phases
 
