--- a/concepts/schain-types.mdx
+++ b/concepts/schain-types.mdx
@@ -4,14 +4,14 @@ description: Introduction to SKALE Chain Technology
 prev: false
 ---
 
-The SKALE Network is home to a unique type of decentralized and distributed compute system known as a SKALE Chain. Uniquely designed to offer both permissioned and permissionless compute; SKALE Chains are themselves are Layer 1 blockchains with additional layers of modular management and functionality enabling them to exist as an Appchain or as an ecosystem chain like a hub.
+SKALE Chains are elastic L1s that can be tuned for permissionless apps, ecosystem hubs, or private/enterprise workloads. They inherit zero gas fees, instant finality, and pooled security while letting operators choose custom policies, access controls, and pricing models.
 
-When a new SKALE Chain is created, the owner of the chain is provided elevated privileges which they can use to setup the chain to their unique needs. Privileges can be provided to others, secured via multisigs, or renounced entirely. This section of the documentation explores a variety of critical operations that should be taken when a new SKALE Chain is created.
+When you launch a chain, you get configuration rights that can be delegated to teammates, secured with multisig, or fully renounced for community control.
 
-## SKALE Chain Setup Guide
+*[Graphic placeholder: Different SKALE Chain archetypes—appchain, hub, private]* 
 
-The following is the step-by-step operation for SKALE Chain setup and creation:
+## Launching a SKALE Chain
 
-1. Follow the [Setup Requirements](/developers/run-a-skale-chain/setup-requirements)
-2. Determine which features you want to [customize on your SKALE Chain](/developers/run-a-skale-chain/customize-schain)
-3. SKALE Chain Creation. Join us in [Discord](https://discord.gg/skale) to request a SKALE Chain
+- Review the [setup requirements](/developers/run-a-skale-chain/setup-requirements).
+- Decide what to [customize on your SKALE Chain](/developers/run-a-skale-chain/customize-schain) (gas policy, permissions, resources).
+- Request creation in [Discord](https://discord.gg/skale) or through your SKALE partner channel.
