--- a/concepts/skale-chain/instant-finality.mdx
+++ b/concepts/skale-chain/instant-finality.mdx
@@ -1,36 +1,36 @@
 ---
 title: "Instant Finality"
-description: "Understanding instant transaction finality on SKALE"
+description: "Why SKALE blocks are irreversible the moment they land"
 ---
 
 ## Overview
 
-SKALE achieves instant finality for transactions, meaning transactions are confirmed immediately without waiting for multiple block confirmations. This is critical for applications requiring immediate state confirmation, especially for autonomous agents.
+On SKALE, transactions are final as soon as their block is committed—no 6-block wait, no reorg anxiety. BLS threshold signatures from a supermajority of the chain’s validators make each block irreversible the moment it lands. That’s the foundation for real-time apps, games, and AI agents.
+
+*[Graphic placeholder: Single-block confirmation vs. multi-confirmation timeline]* 
 
 ## Instant Finality
 
-Unlike many blockchains that require multiple block confirmations, SKALE transactions achieve finality in a single block. Once a transaction is included in a block and the block is committed, the transaction is final and cannot be reverted.
+Once a transaction is included and the block is signed by ≥2/3 of validators, it cannot be rolled back. There’s no incentive or ability to reorder finalized transactions, which keeps user flows snappy and predictable.
 
 ## Benefits
 
-- **Immediate confirmation** - Transactions are final as soon as they're included in a block
-- **Agent-friendly** - Autonomous agents can make decisions immediately based on confirmed state
-- **Real-time applications** - Enables real-time payment systems and interactive applications
-- **Reduced latency** - No waiting for multiple confirmations
+- **Immediate confirmation** – Ideal for payments, gaming, and AI agents.
+- **Predictable UX** – Users never wait for multiple confirmations or watch mempools.
+- **DeFi-ready** – Settlements and liquidations execute without reorg risk.
 
 ## How It Works
 
-SKALE's consensus mechanism ensures that once a block is committed with a supermajority threshold signature, it is final. The BLS threshold signature provides cryptographic proof that the block has been agreed upon by the required majority of nodes.
+SKALE’s asynchronous BFT consensus reaches agreement first, then validators produce a BLS threshold signature. That signature is cryptographic proof that a supermajority agreed, making the block immutable.
 
 ## Use Cases
 
-- **Payments** - Instant payment confirmation
-- **Agent operations** - Agents can react immediately to state changes
-- **Gaming** - Real-time game state updates
-- **DeFi** - Immediate settlement of trades and swaps
+- **Payments** – Instant receipts and settlements.
+- **Agents** – Autonomous agents can act on-chain state immediately.
+- **Gaming** – Real-time state sync without rollbacks.
+- **DeFi** – Immediate settlement for swaps, lending, and auctions.
 
 ## Related Topics
 
 - [Consensus](/concepts/skale-chain/consensus)
 - [Threshold Schemes](/concepts/threshold-schemes)
-
