--- a/concepts/skale-network/gas-fees/zero-gas-fees.mdx
+++ b/concepts/skale-network/gas-fees/zero-gas-fees.mdx
@@ -1,39 +1,33 @@
 ---
 title: "Zero Gas Fees"
-description: "Understanding SKALE's zero gas fee model"
+description: "Why SKALE transactions feel free while staying secure"
 ---
 
 ## Overview
 
-SKALE solves the gas fee barrier with a unique design known as **zero gas fees**. There is a gas token on SKALE, however, it has no monetary or economic value.
-This token operates just like Ether on Ethereum, however, with no monetary value it cannot be traded or sold.
+SKALE chains feel free to users because transactions use sFUEL—a gas token with no market value. sFUEL preserves EVM compatibility and spam protection without forcing users to buy tokens. Chain owners pay predictable monthly costs instead of passing gas fees to end users.
 
-The token on SKALE exists for two (2) reasons:
-
-1. To ensure compatibility with popular EVM tooling. This allows developers on existing EVM based blockchains like Ethereum to quickly start building on SKALE
-2. To prevent spam and DDoS attacks on the network
+*[Graphic placeholder: User signs tx → sFUEL applied automatically → zero-gas UX]*
 
 <Note>
-Zero Gas Fees is NOT the same thing as gasless transactions. While they are often used interchangeably, they are two different ways of transacting on SKALE each with their own pros and cons.
+Zero gas fees is different from gasless transactions. Gasless relies on proof-of-work magic numbers; zero gas fees uses free sFUEL with built-in rate limiting.
 </Note>
 
 ## SKALE Fuel (sFUEL)
 
-The native gas token on every SKALE Chain is known as SKALE Fuel or sFUEL for short. sFUEL is distributed by either the SKALE Chain Operator, 
-the dApp to users, or a [public faucet](https://sfuelstation.com).
+sFUEL is minted per chain, cannot be traded, and is distributed by chain operators, dApps, or a [public faucet](https://sfuelstation.com). It behaves like ETH for gas accounting, but with no economic value—so onboarding is instant:
 
-- **For Developers:** With the zero gas fee model, developers can start building on SKALE instantly without having to first purchase gas tokens.
-Additionally, putting more onchain and having larger smart contracts or many smart contracts is no longer a concern.
+- **For developers:** Deploy immediately; larger contracts and more onchain logic no longer carry gas sticker shock.
+- **For users:** Apps can invisibly fund wallets with sFUEL during onboarding, so people transact without thinking about gas.
 
-- **For Users:** Even better, users do not need to purchase gas tokens to interact with dApps on SKALE. With sFUEL being given to users invisibly during onboarding
-to a dApp -- which is a process called sFUEL Distribution -- users can start interacting with applications on SKALE and never even know they are "onchain".
+*[Graphic placeholder: App onboarding flow auto-distributing sFUEL to a new wallet]*
 
 ## Benefits
 
-- **No barrier to entry** - Users don't need to purchase tokens to interact with dApps
-- **Predictable costs** - Chain owners pay a flat monthly fee, not per-transaction
-- **EVM compatibility** - Works with all existing Ethereum tooling
-- **Spam protection** - DDoS protection mechanisms prevent network abuse
+- **No paywall** – Remove the “buy gas first” step from onboarding.
+- **Predictable costs** – Chain owners pay monthly, not per transaction.
+- **EVM tooling ready** – Works with wallets, SDKs, and libraries as-is.
+- **Built-in safety** – Rate limits and optional gas settings prevent abuse even with free gas.
 
 ## Related Topics
 
