--- a/get-started/skl-token/skl-token.mdx
+++ b/get-started/skl-token/skl-token.mdx
@@ -3,7 +3,7 @@ title: The SKL Token
 description: A conceptual overview and introduction into the SKL Token
 ---
 
-The SKL token is an ERC-777 hybrid utility token natively deployed to Ethereum that allows its holders to:
+The SKL token is the utility token of the SKALE Network. It is deployed on Ethereum as an ERC-777 hybrid utility and supports the following functions:
 
 - Delegate SKL tokens to validators which are then staked into the delegated proof of stake SKALE Network
 - Stake SKL tokens as a validator to run a SKALE Supernode
@@ -11,7 +11,7 @@ The SKL token is an ERC-777 hybrid utility token natively deployed to Ethereum t
 - Participate in SKALE Network governance via the SKALE DAO for those who are actively delegated to a validator
 
 <Note>
-SKL is NOT the native gas token of SKALE Chains. Unlike other chains where the native token holds economic value in order to pay for gas fees, SKALE Chains use a token with no economic value called sFUEL which enables zero-gas cost transactions.
+SKL is NOT the native gas token of SKALE Chains. Unlike other chains where the native token holds economic value in order to pay for gas fees, SKALE Chains use a token with no economic value called sFUEL which enables zero-gas cost transactions. The SKL token is activley bridged to SKALE Chains in ERC-20 format.
 </Note>
 
 The SKL token is native to Ethereum, but available across multiple chains. The following are the official deployments: 
@@ -25,15 +25,9 @@ The SKL token is native to Ethereum, but available across multiple chains. The f
 
 ## Governance
 
-If you hold and delegate SKL tokens you can vote on governance proposals that affect the economic operations of the SKALE Network. This includes proposals for SKALE Chain pricing, network inflation, and more. See [the forum post introducing governance](https://forum.skale.network/t/a-proposal-for-skale-networks-on-chain-governance-system/447) for more.
+SKL delegators/stakers are elligible to bring items up for vote and vote on governance proposals via the SKALE DAO that impact the economic operations of the SKALE Network. This includes proposals for SKALE Chain pricing, network inflation, and more. See [the forum post introducing governance](https://forum.skale.network/t/a-proposal-for-skale-networks-on-chain-governance-system/447) for more.
 
 When you vote on a proposal you use your SKL tokens to signal approval or opposition of the active proposal up for vote. The more SKL tokens you have, the more influence you can vote with.
-
-## Learn More
-
-- [Tokenomics](/get-started/skl-token/tokenomics) - Detailed tokenomics information, distribution, and supply
-
-## Related Topics
 
 - [Staking SKL](/get-started/staking/staking-skl) - Learn about staking SKL tokens
 - [Governance](/get-started/governance/skale-dao) - Participate in SKALE DAO governance
