--- a/get-started/use-cases/gaming.mdx
+++ b/get-started/use-cases/gaming.mdx
@@ -5,33 +5,40 @@ description: "Build blockchain games with zero gas fees and instant finality"
 
 SKALE is built for gaming. Privacy, zero gas fees, instant finality, and native random number generation remove the friction of traditional blockchains.
 
-## Features
+CoinGecko profiles SKALE as a zero-gas, high-throughput gaming stack, highlighting instant confirmations and player-friendly UX[1]. Your economy stays responsive under peak load, and you keep control over balance changes without waiting for shared L2 governance.
 
-**Privacy** - Isolated execution environment with access control.
+## Player-First Performance
 
-**Zero gas fees** - Players interact without transaction costs.
+- **Zero gas UX** — Players craft, trade, and battle without fees; you keep the cost predictable via flat monthly chain pricing.
+- **Instant actions** — Finality in seconds means no pending states or lost matches; live ops can push updates without downtime.
+- **Fair randomness** — Native VRF powers loot, drops, and matchmaking with verifiable fairness.
+- **High concurrency** — Thousands of concurrent players per shard with isolated execution so noisy neighbors never impact you.
 
-**Instant finality** - In-game actions confirm immediately.
+> Graphic: Gameplay flow showing action → SKALE transaction → instant confirmation → reward.
 
-**Random number generation** - Built-in verifiable randomness for loot, matchmaking, and more.
+## What teams ship on SKALE
 
-**High throughput** - Support thousands of concurrent players.
+### Live-service economies
+Seasonal events, crafting, and auctions run onchain without rate limits. Treasury and marketplace activity can bridge to Ethereum for liquidity when needed.
 
-**Predictable costs** - Flat monthly fee regardless of activity.
+### Competitive play and tournaments
+Bracket creation, rewards, and fraud-proof match results execute instantly. Anti-cheat telemetry stays private on your chain.
 
-## Use Cases
+### Cross-game assets
+Shared assets can move between your titles while remaining fee-free for players. Bridge to public chains to list on open marketplaces.
 
-- Web3 games with NFTs and tokens
-- Play-to-earn mechanics
-- Game asset marketplaces
-- On-chain tournaments
-- Cross-game assets
-- Autonomous NPCs
+### AI-driven NPCs and ops
+Agents manage NPC behaviors and dynamic events. Instant finality keeps AI states aligned with player actions.
 
-## Resources
+> Graphic: Architecture with game client, SKALE chain, VRF module, and Ethereum bridge.
 
-- [Build a DApp](/developers/build-a-dapp)
-- [Random Number Generation](/developers/native-features/random-number-generation)
-- [Deploy ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token)
-- [Deploy ERC-1155 Token](/cookbook/smart-contracts/deploy-erc1155-token)
+## Launch Plan
+
+1) Scaffold contracts with [Build a DApp](/developers/build-a-dapp) and wire verifiable randomness via [Random Number Generation](/developers/native-features/random-number-generation).  
+2) Ship assets using [Deploy ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token) or [Deploy ERC-1155 Token](/cookbook/smart-contracts/deploy-erc1155-token).  
+3) Stress test live ops on a staging chain, then migrate balances and go live on your dedicated SKALE chain.
+
+## References
+
+[1] CoinGecko, “Web3 Gaming on SKALE in 2024,” 2024. <https://www.coingecko.com/learn/web3-gaming-on-skale-in-2024>
 
