--- a/get-started/use-cases/more-use-cases.mdx
+++ b/get-started/use-cases/more-use-cases.mdx
@@ -3,33 +3,37 @@ title: "More Use Cases"
 description: "DeFi, DePIN, Social, Supply Chain, and more"
 ---
 
+SKALE chains cover the long tail of onchain products—from finance to social to real-world systems—without forcing users to pay gas or wait for finality. a16z’s State of Crypto 2025 highlights stablecoins, DePIN, and social as breakout categories[1]; SKALE gives each a private, high-throughput lane with bridges to Ethereum when you need liquidity or verification.
+
 ## DeFi
 
-Privacy, zero gas fees, instant finality, and high throughput for DEXs, lending, yield farming, derivatives, stablecoins, and liquidity pools.
+Zero-gas swaps, lending, and derivatives with predictable margins. Finality in seconds removes sandwich and reorg risk; bridge to Ethereum for liquidity mining or settlement when you need depth.
 
 ## DePIN
 
-Microtransactions and high throughput for compute networks, storage networks, bandwidth sharing, IoT devices, sensor networks, and energy trading.
+Run high-volume microtransactions for compute, storage, bandwidth, and energy networks. Zero fees make machine-to-machine coordination viable; isolated chains prevent noisy neighbors from degrading service. Grayscale notes DePIN is bridging crypto to physical systems with AI-related networks dominating by market cap[2].
 
 ## Social
 
-Privacy, zero gas fees, and instant finality for social networks, content creation, social tokens, NFT marketplaces, decentralized identity, and community governance.
+Ship social graphs, creator economies, and governance without asking users to buy gas. Instant finality keeps feeds and reputations fresh; privacy controls protect user data while enabling public verifications when you choose.
 
 ## Supply Chain
 
-Traceability, privacy, and interoperability for product tracking, food safety, pharmaceutical tracking, logistics, certification, and counterfeit prevention.
+Trace goods with private data on SKALE while anchoring proofs to Ethereum for verification. Supports recalls, provenance, and compliance workflows without exposing sensitive supplier data.
 
 ## Healthcare
 
-Privacy and compliance for medical records, clinical trials, drug traceability, telemedicine, health insurance, and research data sharing.
+Keep PHI private with isolated execution, while sharing cryptographic attestations across providers and payers. Real-time finality improves claims, telemedicine, and clinical trial data integrity.
 
 ## Identity and Credentials
 
-Privacy and verifiability for digital identity, educational credentials, professional certifications, KYC/AML, access control, and reputation systems.
+Issue and manage credentials privately; share attestations or proofs publicly when needed. Zero gas keeps verification free for users and partners.
 
 ## Real Estate
 
-Tokenization and transparency for property tokenization, property records, rental platforms, real estate investment, property verification, and automated transactions.
+Tokenize properties, manage rentals, and settle investor payouts with instant finality. Keep title data private on SKALE while publishing proofs to public chains for trust.
+
+> Graphic: Grid of verticals showing private SKALE chains with optional Ethereum bridges for proofs and liquidity.
 
 ## Resources
 
@@ -37,4 +41,9 @@ Tokenization and transparency for property tokenization, property records, renta
 - [Solidity Quickstart](/developers/solidity-quickstart)
 - [Deploy on SKALE](/developers/deploy-on-skale)
 - [SKALE Bridge](/developers/skale-bridge/overview)
+
+## References
+
+[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. <https://a16zcrypto.com/posts/article/state-of-crypto-report-2025/>  
+[2] Grayscale Research, “The Real World: How DePIN Bridges Crypto Back to Physical Systems,” 2025. <https://research.grayscale.com/reports/the-real-world-how-depin-bridges-crypto-back-to-physical-systems>
 
