--- a/concepts/skale-chain/ddos-protection.mdx
+++ b/concepts/skale-chain/ddos-protection.mdx
@@ -9,6 +9,8 @@ with a configurable DDOS protection system that allows the Chain to detect peak
 The protection enables the chain to survive in high load situations by banning
 caller origins for a preset number of seconds.
 
+*[Graphic placeholder: Rate-limit dashboard with per-origin thresholds]* 
+
 An example configuration is:
 
 ```json
@@ -72,3 +74,9 @@ And DDoS protection can be completely disabled with the following config:
     "enabled": false,
 }
 ```
+
+## Why It Matters
+
+Chain operators can tune these limits to keep RPC endpoints responsive during traffic spikes—protecting node health while preserving the zero-gas, instant-finality experience for legitimate users.
+
+*[Graphic placeholder: Alert timeline showing spike → auto-ban → recovery]* 
