--- a/concepts/skale-network/containerized-nodes.mdx
+++ b/concepts/skale-network/containerized-nodes.mdx
@@ -1,118 +1,53 @@
 ---
 title: "Containerized Nodes"
-description: "Understanding how SKALE uses containerization to enable efficient node operations"
+description: "How SKALE packs many chains onto the same hardware safely"
 ---
 
 ## Overview
 
-SKALE Network uses containerization technology to enable efficient node operations, allowing a single physical server to support multiple SKALE Chains. This architecture enables horizontal scalability and efficient resource utilization.
+SKALE nodes run in lightweight containers so a single server can secure multiple SKALE Chains at once. This keeps costs low for validators and chain owners while isolating resources and failures between chains.
+
+*[Graphic placeholder: Single server running multiple isolated SKALE Chain containers]* 
 
 ## What are Containerized Nodes?
 
-Containerized nodes run SKALE node software in isolated containers (such as Docker containers), allowing:
-
-- **Multiple Chains per Server** - A single physical server can support multiple SKALE Chains
-- **Resource Isolation** - Each chain's resources are isolated from others
-- **Efficient Resource Use** - Better utilization of server resources
-- **Easy Deployment** - Simplified node deployment and management
+Containerization packages the SKALE node runtime (consensus, execution, storage, networking) into isolated units. Each container is mapped to a chain assignment, with dedicated CPU/memory limits and network isolation. Validators can run several containers on one host, maximizing utilization while keeping faults contained.
 
 ## Architecture
 
-### Container Technology
-
-SKALE nodes run in virtualization containers:
-
-- **Docker Containers** - Typical implementation uses Docker containers
-- **Isolated Environments** - Each container provides isolated execution environment
-- **Resource Allocation** - Resources allocated per container/chain
-- **Network Isolation** - Network isolation between containers
-
-### Node Implementation
-
-A typical implementation:
-
-- **Network Node** - Runs SKALE consensus and validation
-- **Storage** - Stores chain state and data
-- **Multiple Chains** - Supports multiple SKALE Chains simultaneously
-- **Resource Sharing** - Shares physical resources across chains
+- **Container runtime** – Docker-style containers with cgroups limits to guarantee CPU/memory boundaries per chain.
+- **Network isolation** – Virtual networking separates chain traffic and prevents cross-talk.
+- **Chain mapping** – Each container is bound to a chain assignment from SKALE Manager and participates in its consensus committee.
 
 ## Benefits
 
-### Efficiency
+- **Efficiency** – Run multiple chains per server, reducing hardware costs.
+- **Isolation** – Performance or faults on one chain don’t spill into others.
+- **Rapid deployment** – Start, stop, or rotate chain assignments in minutes.
+- **Elastic scale** – Add containers for new chains without rebuilding infrastructure.
 
-- **Resource Utilization** - Better use of server resources
-- **Cost Reduction** - Lower costs per chain
-- **Scalability** - Easy to scale by adding containers
-- **Flexibility** - Flexible resource allocation
-
-### Operations
-
-- **Easy Deployment** - Simplified node deployment
-- **Management** - Easier node management and updates
-- **Isolation** - Fault isolation between chains
-- **Monitoring** - Easier monitoring and debugging
-
-### Network
-
-- **Horizontal Scaling** - Add capacity by adding containers
-- **Resource Efficiency** - Efficient use of network resources
-- **Cost Effectiveness** - Lower costs for chain owners
-- **Flexibility** - Flexible chain resource allocation
+*[Graphic placeholder: Timeline of node rotation swapping containers between chains]* 
 
 ## How It Works
 
-### Container Allocation
-
-When a SKALE Chain is created:
-
-1. **Resource Allocation** - Resources are allocated for the chain
-2. **Container Creation** - A container is created for the chain
-3. **Node Deployment** - SKALE node software is deployed in the container
-4. **Chain Assignment** - The container is assigned to the chain
-5. **Operation** - The node validates and stores chain data
-
-### Multi-Chain Support
-
-A single physical server can support multiple chains:
-
-- **Separate Containers** - Each chain runs in its own container
-- **Resource Allocation** - Resources allocated per chain
-- **Isolated Execution** - Chains operate independently
-- **Shared Infrastructure** - Physical infrastructure shared across chains
+When SKALE Manager assigns a node to a chain, the validator spins up a container with the right configuration, keys, and resource limits. Containers receive proposals, sign blocks, store state, and rotate out cleanly when the node’s assignment changes.
 
 ## Implementation Details
 
-### Container Technology
-
-SKALE uses containerization technologies such as:
-
-- **Docker** - Most common implementation
-- **Kubernetes** - For orchestration at scale
-- **Container Runtime** - Standard container runtimes
-- **Orchestration** - Container orchestration tools
-
-### Resource Management
-
-Resources are managed through:
-
-- **Allocation** - Resources allocated per container
-- **Limits** - Resource limits per container
-- **Monitoring** - Resource usage monitoring
-- **Scaling** - Dynamic resource scaling
+- **Runtime** – Docker-compatible runtime; orchestration via Kubernetes or similar is common for fleets.
+- **Resource controls** – cgroups/quotas for CPU, RAM, and storage per chain.
+- **Observability** – Per-container metrics/logging simplify troubleshooting and SLA reporting.
 
 ## Use Cases
 
-Containerized nodes enable:
-
-- **Multiple Chains** - Support for multiple chains per server
-- **Cost Efficiency** - Lower costs for chain operations
-- **Scalability** - Easy horizontal scaling
-- **Flexibility** - Flexible resource allocation
+- **Validator economics** – Higher rewards per server by hosting multiple chains.
+- **Enterprise deployments** – Run isolated environments for business units or partners.
+- **Testing** – Spin up short-lived chains or environments without new hardware.
 
 ## Related Topics
 
-- [Virtualized Blockchains](/concepts/skale-network/virtualized-blockchains) - Virtualization of blockchain resources
-- [Horizontal Scalability](/concepts/skale-network/horizontal-scalability) - How SKALE scales horizontally
-- [SKALE Manager](/concepts/skale-manager) - Network coordination
-- [Pooled Security Model](/concepts/skale-network/pooled-security-model) - Network security model
+- [Virtualized Blockchains](/concepts/skale-network/virtualized-blockchains)
+- [Horizontal Scalability](/concepts/skale-network/horizontal-scalability)
+- [SKALE Manager](/concepts/skale-network/skale-manager)
+- [Pooled Security Model](/concepts/skale-network/pooled-security-model)
 
