--- a/concepts/skale-network/skale-manager.mdx
+++ b/concepts/skale-network/skale-manager.mdx
@@ -1,98 +1,46 @@
 ---
 title: "SKALE Manager"
-description: "Comprehensive overview of SKALE Manager components"
+description: "The Ethereum-based control plane that orchestrates SKALE"
 ---
 
 ## Overview
 
-SKALE Manager is the core set of smart contracts deployed on Ethereum mainnet that coordinate and manage the SKALE Network. It serves as the "brain" of SKALE, handling chain creation, validator management, staking, delegation, and network operations.
+SKALE Manager is a suite of smart contracts on Ethereum that runs the SKALE control plane—staking, delegation, pricing, chain creation, validator rotation, and slashing. Keeping governance and economics on Ethereum gives SKALE transparent, tamper-resistant coordination while SKALE Chains focus on high-speed execution with zero gas fees.
+
+*[Graphic placeholder: Ethereum SKALE Manager contracts coordinating validator rotation and chain lifecycle]* 
 
 ## Core Components
 
-### ContractManager
-
-The central registry that manages all other SKALE Manager contracts. It provides a single entry point for accessing all network components.
-
-### SKALE Chains
-
-Manages SKALE Chain creation, configuration, and lifecycle. Handles chain registration, metadata, and status tracking.
-
-### SchainsInternal
-
-Internal contract handling chain state and operations not exposed through the public interface.
-
-### Nodes
-
-Manages validator nodes in the network. Tracks node registration, status, and participation in chains.
-
-### ValidatorService
-
-Handles validator registration, configuration, and management. Validators register here to participate in the network.
-
-### DelegationController
-
-Manages SKL token delegation from delegators to validators. Handles delegation amounts, periods, and rewards distribution.
-
-### DelegationPeriodManager
-
-Manages delegation periods and their associated parameters. Delegators can choose different staking periods with varying rewards.
-
-### Distributor
-
-Distributes rewards to validators and delegators based on their participation and delegation amounts.
-
-### BountyV2
-
-Manages bounty payments to validators for securing the network. Bounties are distributed monthly based on validator performance.
-
-### Punisher
-
-Handles slashing and penalties for validators that violate network rules or fail to meet compliance requirements.
-
-### SlashingTable
-
-Defines the slashing rules and penalties for various types of validator misbehavior.
-
-### NodeRotation
-
-Manages the rotation of nodes across different SKALE Chains. Ensures fair distribution of validator resources.
-
-### ConstantsHolder
-
-Stores network-wide constants and configuration parameters that can be updated through governance.
-
-### Wallets
-
-Manages validator wallets and their associated permissions. Handles wallet creation and access control.
-
-### TimeHelpers
-
-Provides time-based utilities for the network, including block timestamp management and time-based operations.
-
-### Pricing
-
-Manages pricing for SKALE Chain creation and operation. Handles payment processing and fee collection.
+- **ContractManager** – Registry of all SKALE Manager modules.
+- **SChains/SChainsInternal** – Chain creation, metadata, and lifecycle tracking.
+- **Nodes & ValidatorService** – Validator registration, configuration, and performance data.
+- **DelegationController & DelegationPeriodManager** – SKL delegation, lock periods, and rewards logic.
+- **Distributor & BountyV2** – Monthly reward distribution for validators and delegators.
+- **Punisher & SlashingTable** – Enforcement of downtime and misbehavior penalties.
+- **NodeRotation** – Randomized committee assignments across chains.
+- **ConstantsHolder & Pricing** – Network parameters, chain pricing, and payment handling.
 
 ## Network Operations
 
 SKALE Manager coordinates:
 
-- **Chain Creation** - New SKALE Chains are created through SKALE Chains contract
-- **Validator Management** - Validators register and manage their nodes
-- **Staking & Delegation** - SKL tokens are staked and delegated through DelegationController
-- **Rewards Distribution** - Rewards are distributed through Distributor and BountyV2
-- **Node Rotation** - Nodes are rotated across chains through NodeRotation
-- **Compliance** - Validator compliance is monitored through Punisher and SlashingTable
+- **Chain creation** – Register new SKALE Chains, allocate resources, set pricing.
+- **Validator lifecycle** – Register nodes, verify capacity, and rotate committees.
+- **Staking & delegation** – Lock SKL, manage periods, and aggregate validator stake.
+- **Rewards** – Monthly payouts based on performance and stake weight.
+- **Compliance & slashing** – Detect downtime or protocol violations and penalize accordingly.
+- **Pricing & billing** – Handle monthly fees for chain operators.
 
 ## Integration Points
 
 SKALE Manager integrates with:
 
-- **Ethereum Mainnet** - All contracts are deployed on Ethereum
-- **SKALE Chains** - Chains interact with Manager for coordination
-- **Validators** - Validators interact with Manager for registration and rewards
-- **Delegators** - Delegators interact with Manager for staking
-- **Chain Owners** - Chain owners interact with Manager for chain creation
+- **Ethereum mainnet** – The source of truth for staking, rotation, and slashing.
+- **SKALE Chains** – Pull committee assignments and report performance.
+- **Validators & delegators** – Stake SKL, claim rewards, and manage participation.
+- **Chain owners** – Create, configure, and renew chains with predictable pricing.
+
+*[Graphic placeholder: Interaction map between SKALE Manager, validators, delegators, and chains]* 
 
 ## Related Topics
 
