--- a/get-started/use-cases/private-payments.mdx
+++ b/get-started/use-cases/private-payments.mdx
@@ -5,29 +5,46 @@ description: "Build payment systems with instant finality and flat cost structur
 
 SKALE is built for payments. Privacy, instant finality, zero gas fees, and predictable costs let you scale to billions of transactions.
 
-## Features
+a16z’s research on stablecoins (“How stablecoins will eat payments”) calls out near-zero fees and global reach as the unlock[1]. Coinbase’s market intelligence framework highlights stablecoin growth driven by lower costs and faster settlement[2], while S&P points to reserve quality and policy clarity as key to mainstream stability[3]. SKALE’s gasless design plus instant finality gives you that dynamic without passing costs to users, while privacy controls keep sensitive flows contained.
 
-**Privacy** - Isolated execution environment with access control.
+## Payment-Grade Performance
 
-**Zero gas fees** - Users pay without transaction costs.
+- **No-fee UX** — Users transact without touching gas; you keep predictable unit economics via flat chain pricing.
+- **Instant settlement** — Finality in seconds removes chargeback risk for digital goods and subscriptions.
+- **Private rails** — Isolated execution lets you enforce KYC/AML and data residency while still interoperating when you choose.
+- **Elastic throughput** — Scale to thousands of TPS per chain; shard products across chains as you grow.
 
-**Instant finality** - Payments confirm immediately.
+> Graphic: Flow showing pay-in, SKALE confirmation, pay-out, optional bridge to Ethereum.
 
-**Flat cost structure** - Predictable monthly fee regardless of activity.
+## Patterns teams ship
 
-**High throughput** - Process thousands of transactions per second.
+### Consumer payments and wallets
+Offer fee-free purchases and rewards; batch settlement to Ethereum or other chains when you want external liquidity or audit trails. Add non-custodial refunds and dispute flows using the Refund Protocol pattern to make stablecoin payments feel card-like without centralized custodians[4].
 
-## Use Cases
+### B2B and B2B2C platforms
+Embed payments inside marketplaces and SaaS flows with predictable margins. Access control keeps merchant data scoped to your chain.
 
-- Micropayments
-- Real-time payments
-- Cross-border payments
-- Subscription services
-- Agent-to-agent payments
+### Payout networks and payroll
+Stream payouts in real time without intermediaries; finality removes clawback risk for contractors and creators.
 
-## Resources
+### Machine and agent payments
+Enable IoT devices or autonomous agents to transact continuously without gas drag; use rate limits and allowlists for safety.
 
-- [Build a DApp](/developers/build-a-dapp)
-- [Zero Gas Fees](/concepts/gas-fees/zero-gas-fees)
-- [Instant Finality](/concepts/skale-chain/instant-finality)
+### Cross-border and compliant flows
+Anchor stablecoins on SKALE for instant FX-free transfers, then bridge to jurisdictions where settlement is required. Align treasury and corridor design with stablecoin reserve and policy guidance[3] and the growth playbook outlined by Coinbase[2].
+
+> Graphic: Multi-hop payment path with SKALE as private rail and optional L1 bridge.
+
+## Go-Live Path
+
+1) Prototype flows with [Build a DApp](/developers/build-a-dapp); model unit economics using [Zero Gas Fees](/concepts/gas-fees/zero-gas-fees).  
+2) Integrate deterministic settlement guarantees from [Instant Finality](/concepts/skale-chain/instant-finality); add monitoring for failed transfers.  
+3) Pilot with one corridor or segment, then expand volume while keeping fees invisible to end users.
+
+## References
+
+[1] a16z, “How stablecoins will eat payments, and what happens next,” 2025. <https://a16zcrypto.com/posts/article/how-stablecoins-will-eat-payments/>  
+[2] Coinbase Market Intelligence, “New framework for stablecoin growth,” 2025. <https://www.coinbase.com/institutional/research-insights/research/market-intelligence/new-framework-for-stablecoin-growth>  
+[3] S&P Global Ratings, “Stablecoins, financial stability, and treasuries: What’s next for money and safe assets,” 2025. <https://www.spglobal.com/ratings/en/regulatory/article/stablecoins-financial-stability-and-treasuries-whats-next-for-money-and-safe-assets-s101659822>  
+[4] Circle Research, “Refund Protocol: Non-Custodial Dispute Resolution for Stablecoin Payments,” 2025. <https://www.circle.com/blog/refund-protocol-non-custodial-dispute-resolution-for-stablecoin-payments>
 
